--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-available-times": "^1.2.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
