--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "pt-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.5.1",
-    "@material-ui/icons": "^4.5.1",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2",
-    "react-available-times": "^1.2.2",
-    "react-dom": "^16.10.2",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-table": "^6.10.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "pt-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@fullcalendar/core": "^4.3.1",
+		"@fullcalendar/daygrid": "^4.3.0",
+		"@fullcalendar/react": "^4.3.0",
+		"@material-ui/core": "^4.5.1",
+		"@material-ui/icons": "^4.5.1",
+		"moment": "^2.24.0",
+		"moment-timezone": "^0.5.27",
+		"prop-types": "^15.7.2",
+		"react": "^16.10.2",
+		"react-available-times": "^1.2.2",
+		"react-dom": "^16.10.2",
+		"react-event-calendar": "^0.3.0",
+		"react-router": "^5.1.2",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.2.0",
+		"react-table": "^6.10.3"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
